# deepin-terminal

./: Makefile.am  configure.ac  deepin-terminal_2.1.0.orig.tar.gz.delta  deepin-terminal_2.1.0.orig.tar.gz.id  deepin-terminal_2.1.6.orig.tar.gz.delta  deepin-terminal_2.1.6.orig.tar.gz.id  deepin-terminal_2.1.8.orig.tar.gz.delta  deepin-terminal_2.1.8.orig.tar.gz.id  deepin-terminal_2.2.4.orig.tar.gz.delta  deepin-terminal_2.2.4.orig.tar.gz.id  deepin-terminal_2.3.1.orig.tar.gz.delta  deepin-terminal_2.3.1.orig.tar.gz.id  deepin-terminal_2.4.orig.tar.gz.delta  deepin-terminal_2.4.orig.tar.gz.id
debian/: changelog  control  copyright  deepin-terminal.install  rules  watch
debian/patches/: 0001-theme-chmod-x-for-non-executables.patch  0002-Makefile-do-not-handle-binary-installation.patch  series
